# laser-race

./: .gitignore  Cargo.toml  README.md
firmware/: Cargo.toml  README.md
firmware/src/: main.rs
race-control/: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
race-control/.cargo/: config.toml
race-control/.github/: PULL_REQUEST_TEMPLATE.md
race-control/.github/ISSUE_TEMPLATE/: bug_report.md
race-control/.github/workflows/: cd.yml
race-control/src/: analog_thresholds.rs  checkin_plugin.rs  command_line.rs  common.rs  main.rs  main_loop.rs  mocks.rs  splash_plugin.rs
