[package]
authors = ["Albino Cordeiro"]
name = "race-control"
version = "0.1.0"
edition = "2021"
description = "Laser-race signal management and race control"
repository = "https://github.com/albinocordeiro/race-control"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
bevy = {version = "0.8.1"}
clap = {version = "4.0.15", features = ["derive"]}
log = "0.4.17"
serde = "1.0.145"
serde_derive = "1.0.145"
serialport = "4.2.0"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"

[dev-dependencies]
pretty_assertions = "1.3.0"
